--- a/asm/Makefile
+++ b/asm/Makefile
@@ -1,18 +1,29 @@
 # Compile test asm for spike and SystermVerilog implementation
 
 RISCV_PREFIX := riscv64-unknown-elf-
-RISCV_CFLAGS := -march=rv32i -mabi=ilp32 -static -mcmodel=medany -fvisibility=hidden -nostdlib -nostartfiles -T systemverilog.lds
+RISCV_CFLAGS := -march=rv32i -mabi=ilp32 -static -mcmodel=medany -fvisibility=hidden -nostdlib -nostartfiles 
 RISCV_OBJDUMP_FLAGS := -Mno-aliases -Mnumeric --disassemble-all --disassemble-zeroes --section=.text --section=.text.startup --section=.text.init --section=.data
 
+LINKER_OPTS			:= -T systemverilog.lds
+SPIKE_LINKER_OPTS	:= -T spike32.lds 
+
+# Disable auto rules for .S files
 .SUFFIXES:
 
 # TODO Find all files with .S postfix and use as source files?
 ASM_FILES := 
 
 %.riscv: %.S
-	@$(RISCV_PREFIX)gcc $(RISCV_CFLAGS) -o $*.riscv $<
+	@$(RISCV_PREFIX)gcc $(RISCV_CFLAGS) $(LINKER_OPTS) -o $*.riscv $<
+
+# Compile using spike linker script and enable macros in util.h for spike
+%.spike: %.S
+	@$(RISCV_PREFIX)gcc $(RISCV_CFLAGS) $(SPIKE_LINKER_OPTS) -DSPIKE -o $*.spike $<
 
 %.dump: %.riscv
+	@$(RISCV_PREFIX)objdump $(RISCV_OBJDUMP_FLAGS) $< > $@
+
+%.spike_dump: %.spike
 	@$(RISCV_PREFIX)objdump $(RISCV_OBJDUMP_FLAGS) $< > $@
 
 %.hex: %.riscv
@@ -21,5 +32,5 @@ ASM_FILES :=
 	@rm -f $*.hex.tmp
 
 clean:
-	@rm -f *.dump *.hex *.riscv
+	@rm -f *.dump *.hex *.riscv *.spike *.spike_dump
 
