Finish unit test for add

--- a/asm/Makefile
+++ b/asm/Makefile
@@ -17,6 +17,8 @@ ASM_FILES :=
 	@$(RISCV_PREFIX)gcc $(RISCV_CFLAGS) $(LINKER_OPTS) -o $*.riscv $<
 
 # Compile using spike linker script and enable macros in util.h for spike
+# TODO Right now the spike will run indefinitely in a deadloop, need to check
+# TODO the value in x3 or gp register. If zero, all tests passed, else contains the failed test num
 %.spike: %.S
 	@$(RISCV_PREFIX)gcc $(RISCV_CFLAGS) $(SPIKE_LINKER_OPTS) -DSPIKE -o $*.spike $<
 
