Modify the asm util file to no overwrite register 30

--- a/.gitignore
+++ b/.gitignore
@@ -33,10 +33,12 @@ scripts/
 # ASM Tests
 riscv-tests/
 *.riscv
+*.riscv_expand_macro
 *.hex
 *.dump
 *.spike
 *.spike_dump
+*.spike_expand_macro
 
 # Misc
 devNote.md
