Update minibus waveform

--- a/docs/mini-bus-read-waveform.json5
+++ b/docs/mini-bus-read-waveform.json5
@@ -13,7 +13,7 @@
       {name: 'addr', 		wave: 'x..3.3......x....', data: ['addr1', 'addr2']},
       {name: 'wdata', 	wave: 'x................', data: []},
       {name: 'rdata', 	wave: 'x...4x.....4x....', data: ['data1', 'data2']},
-      {name: 'ren', 		wave: '0..101.....0.....'},
+      {name: 'ren', 		wave: '0..1.1......0....'},
       {name: 'wen', 		wave: '0................'},
       {name: 'ack', 		wave: '0...10.....10....'},
     ],
@@ -22,7 +22,7 @@
       {name: 'addr', 		wave: 'x..3.3......x....', data: ['addr1', 'addr2']},
       {name: 'wdata', 	wave: 'x................', data: []},
       {name: 'rdata1', 	wave: 'x...4x...........', data: ['data1']},
-      {name: 'ren', 		wave: '0..101.....0.....'},
+      {name: 'ren', 		wave: '0..1.1......0....'},
       {name: 'wen', 		wave: '0................'},
       {name: 'ack1', 		wave: '0...10...........'},
     ],
@@ -31,7 +31,7 @@
       {name: 'addr', 		wave: 'x..3.3......x....', data:['addr1', 'addr2']},
       {name: 'wdata', 	wave: 'x................', data: []},
       {name: 'rdata2', 	wave: 'x..........4x....', data: ['data2']},
-      {name: 'ren', 		wave: '0..101.....0.....'},
+      {name: 'ren', 		wave: '0..1.1......0....'},
       {name: 'wen', 		wave: '0................'},
       {name: 'ack2', 		wave: '0..........10....'},
     ]
