--- a/docs/mini-bus-read-write-waveform.json5
+++ b/docs/mini-bus-read-write-waveform.json5
@@ -1,39 +1,41 @@
 {signal: [
-    ["Note",
-     {name: 'Title',		wave: "7...........................", data: ["Mini-Bus master read and write with two slave devices"]},
-     {name: '',			wave: "3..4.5......2.5....23..2....", data: ["Waiting nRST", "Read S1", "Write S2", "Free", "Write S1", "Free", "Read S2", "Free"]},
-     {name: 'Bus-phase',	wave: '2..343.....42.3...423.42....', data: ['unknown', 'addr', 'data', 'addr', 'data', 'free', 'addr', 'data', 'free', 'addr', 'data', 'free']},
-     {},
-    ],
-    ["Global",
-      {name: 'clk', 		wave: 'P...........................'},
-      {name: 'nrst', 		wave: '101.........................'},
-    ],
-    ["Master",
-      {name: 'addr', 		wave: 'x..3.3......x.3....x3..x....', data: ['addr1', 'addr2', 'addr3', 'addr4']},
-      {name: 'wdata', 	wave: 'x....4......x.4....x........', data: ['data2', 'data3']},
-      {name: 'rdata', 	wave: 'x...4x................4x....', data: ['data1', 'data4']},
-      {name: 'ren', 		wave: '0..10...............1.0.....'},
-      {name: 'wen', 		wave: '0....1.....0..1...0.........'},
-      {name: 'ack', 		wave: '0...10.....10.....10..10....'},
-    ],
-     ["Slave1",
-      {name: 'sel1', 		wave: '0..1.0........1....0........'},
-      {name: 'addr', 		wave: 'x..3.3......x.3....x3..x....', data: ['addr1', 'addr2', 'addr3', 'addr4']},
-      {name: 'wdata', 	wave: 'x....4......x.4....x........', data: ['data2', 'data3']},
-      {name: 'rdata1', 	wave: 'x...4x......................', data: ['data1']},
-      {name: 'ren', 		wave: '0..10...............1.0.....'},
-      {name: 'wen', 		wave: '0....1.....0..1...0.........'},
-      {name: 'ack1', 		wave: '0...10............10........'},
-    ],
-     ["Slave2",
-      {name: 'sel2', 		wave: '0....1......0.......1..0....'},
-      {name: 'addr', 		wave: 'x..3.3......x.3....x3..x....', data: ['addr1', 'addr2', 'addr3', 'addr4']},
-      {name: 'wdata', 	wave: 'x....4......x.4....x........', data: ['data2', 'data3']},
-      {name: 'rdata2', 	wave: 'x.....................4x....', data: ['data4']},
-      {name: 'ren', 		wave: '0..10...............1.0.....'},
-      {name: 'wen', 		wave: '0....1.....0..1...0.........'},
-      {name: 'ack2', 		wave: '0..........10.........10....'},
-    ]
-  ]}
-  
+  ["Note",
+   {name: 'Title',		wave: "7...........................", data: ["Mini-Bus master read and write with two slave devices"]},
+   {name: '',			wave: "3..4.5......2.5....23..2....", data: ["Waiting nRST", "Read S1", "Write S2", "Free", "Write S1", "Free", "Read S2", "Free"]},
+   {name: 'Bus-phase',	wave: '2..343.....42.3...423.42....', data: ['unknown', 'addr', 'data', 'addr', 'data', 'free', 'addr', 'data', 'free', 'addr', 'data', 'free']},
+   {},
+  ],
+  ["Global",
+    {name: 'clk', 		wave: 'P...........................'},
+    {name: 'nrst', 		wave: '101.........................'},
+  ],
+  ["Master",
+    {name: 'addr', 		wave: 'x..3.3......x.3....x3..x....', data: ['addr1', 'addr2', 'addr3', 'addr4']},
+    {name: 'wdata', 	wave: 'x....4......x.4....x........', data: ['data2', 'data3']},
+    {name: 'rdata', 	wave: 'x...4x................4x....', data: ['data1', 'data4']},
+    {name: 'width', 	wave: 'x..5.5......x.5....x5..x....', data: ['width1', 'width2', 'width3', 'width4']},
+    {name: 'ren', 		wave: '0..1.0..............1..0....'},
+    {name: 'wen', 		wave: '0....1......0.1....0........'},
+    {name: 'ack', 		wave: '0...10.....10.....10..10....'},
+  ],
+   ["Slave1",
+    {name: 'sel1', 		wave: '0..1.0........1....0........'},
+    {name: 'addr', 		wave: 'x..3.3......x.3....x3..x....', data: ['addr1', 'addr2', 'addr3', 'addr4']},
+    {name: 'wdata', 	wave: 'x....4......x.4....x........', data: ['data2', 'data3']},
+    {name: 'rdata1', 	wave: 'x...4x......................', data: ['data1']},
+    {name: 'width', 	wave: 'x..5.5......x.5....x5..x....', data: ['width1', 'width2', 'width3', 'width4']},
+    {name: 'ren', 		wave: '0..1.0..............1..0....'},
+    {name: 'wen', 		wave: '0....1......0.1....0........'},
+    {name: 'ack1', 		wave: '0...10............10........'},
+  ],
+   ["Slave2",
+    {name: 'sel2', 		wave: '0....1......0.......1..0....'},
+    {name: 'addr', 		wave: 'x..3.3......x.3....x3..x....', data: ['addr1', 'addr2', 'addr3', 'addr4']},
+    {name: 'wdata', 	wave: 'x....4......x.4....x........', data: ['data2', 'data3']},
+    {name: 'rdata2', 	wave: 'x.....................4x....', data: ['data4']},
+   	{name: 'width', 	wave: 'x..5.5......x.5....x5..x....', data: ['width1', 'width2', 'width3', 'width4']},
+    {name: 'ren', 		wave: '0..1.0..............1..0....'},
+    {name: 'wen', 		wave: '0....1......0.1....0........'},
+    {name: 'ack2', 		wave: '0..........10.........10....'},
+  ]
+]}
