--- a/docs/mini-bus-write-waveform.json5
+++ b/docs/mini-bus-write-waveform.json5
@@ -14,7 +14,7 @@
       {name: 'wdata', 	wave: 'x..4.4......x....', data: ['data1', 'data2']},
       {name: 'rdata', 	wave: 'x................', data: []},
       {name: 'ren', 		wave: '0................'},
-      {name: 'wen', 		wave: '0..101.....0.....'},
+      {name: 'wen', 		wave: '0..1.1......0....'},
       {name: 'ack', 		wave: '0...10.....10....'},
     ],
      ["Slave1",
@@ -23,7 +23,7 @@
       {name: 'wdata', 	wave: 'x..4.4......x....', data: ['data1', 'data2']},
       {name: 'rdata1', 	wave: 'x................', data: []},
       {name: 'ren', 		wave: '0................'},
-      {name: 'wen', 		wave: '0..101.....0.....'},
+      {name: 'wen', 		wave: '0..1.1......0....'},
       {name: 'ack1', 		wave: '0...10...........'},
     ],
      ["Slave2",
@@ -32,7 +32,7 @@
       {name: 'wdata', 	wave: 'x..4.4......x....', data: ['data1', 'data2']},
       {name: 'rdata2', 	wave: 'x................', data: []},
       {name: 'ren', 		wave: '0................'},
-      {name: 'wen', 		wave: '0..101.....0.....'},
+      {name: 'wen', 		wave: '0..1.1......0....'},
       {name: 'ack2', 		wave: '0..........10....'},
     ]
   ]}
